# Orb_Slam3_Superpoint

./: CMakeLists.txt
Examples/Monocular/: TUM1_SP.yaml  mono_tum.cc
Examples/Stereo-Inertial/: EuRoC.yaml  RealSense_D435i.yaml  stereo_inertial_realsense_D435i.cc
Tools/: CMakeLists.txt  export_superpoint_onnx.py  extract_sp_descriptors.py  train_sp_vocabulary.cc  visualize_sp_keypoints.py
docs/: SP-FPGA-IP-Architecture.md  SuperPoint-FineTune-Deployment-on-FMQL30TAI.md
docs/superpowers/specs/: 2026-04-23-onnx-nms-optimization-design.md
include/: Frame.h  KeyFrame.h  KeyFrameDatabase.h  LoopClosing.h  Map.h  MapDrawer.h  ORBmatcher.h  SuperPointExtractor.h  SuperPointVocabulary.h  System.h  Tracking.h
src/: Frame.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MapPoint.cc  ORBmatcher.cc  SuperPointExtractor.cc  System.cc  Tracking.cc
